# K_Means_Parallel_Computing_Project_Mid_Term

./: .gitignore  CMakeLists.txt  Cluster.h  KMeans_Presentation.pptx  Point.h  README.md  common_functions.h  cuda_main.cu  parallel_main.cpp  sequential_main.cpp
